# Quakebot

./: .gitignore  Cargo.toml  QuakeBetterControl.py  README.md
src/: commands.rs  main.rs  quakebot.config  serenity_structs.rs  statics.rs  utils.rs  zmq_comm.rs
